# datapl-trading

./: README.md
datapl-trading/: pyproject.toml
