[tool.poetry]
name = "datapl-trading"
version = "0.1.0"
description = ""
authors = ["kevinyeungkevinyeung <kevinyeungkevinyeung@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
requests = "^2.31.0"
ruff = "^0.3.5"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
